--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,3 +10,10 @@ jobs:
         uses: cypress-io/github-action@v5
         with: 
           start: npx cypress run
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3.1.2
+        if: failure()
+        with:
+          name: cypress-videos
+          path: cypress/videos
+        
