--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
     "scripts": {
-    "test": "cypress open"
-  },
-  "devDependencies": {
-    "cypress": "^12.17.2"
-  }
+        "test": "cypress open"
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^6.5.0",
+        "@typescript-eslint/parser": "^6.5.0",
+        "cypress": "^12.17.2",
+        "eslint": "^8.48.0",
+        "prettier": "^3.0.3",
+        "typescript": "^5.2.2"
+    }
 }
