--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-\node_modules
+node_modules
 cypress.env.json
-cypress\fixtures\user.json
-cypress\reports
-cypress\videos
-cypress\downloads
+cypress/reports
+cypress/videos
+cypress/downloads
