--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
     "scripts": {
-        "test": "cypress open"
+        "cy-test": "cypress open",
+        "cy-run": "cypress run"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^6.5.0",
         "@typescript-eslint/parser": "^6.5.0",
         "cypress": "^12.17.2",
+        "cypress-mochawesome-reporter": "^3.5.1",
         "eslint": "^8.48.0",
         "prettier": "^3.0.3",
         "typescript": "^5.2.2"
