--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,19 +2,16 @@
     "compilerOptions": {
         "baseUrl": "./",
         "paths": {
-            "pages/*": [
-                "cypress/pages/*"
-            ]
+            "pages/*": ["cypress/pages/*"]
         },
         "target": "ES6",
         "module": "ES6",
         "esModuleInterop": true,
-        "isolatedModules": true
+        "isolatedModules": true,
+        "types": ["cypress", "node"],
+        "forceConsistentCasingInFileNames": true,
+        "strict": true
     },
-    "include": [
-        "cypress/**/*.ts"
-    ],
-    "exclude": [
-        "node_modules"
-    ]
+    "include": ["**/*.ts"],
+    "exclude": ["node_modules"]
 }
