--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,17 @@
     "compilerOptions": {
         "baseUrl": "./",
         "paths": {
-            "pages/*": ["cypress/pages/*"]
+            "pages/*": ["cypress/pages/*"],
+            "tables/*": ["cypress/interfaces/database/*"]
         },
-        "target": "ES6",
-        "module": "ES6",
+        "target": "ES5",
+        "lib": ["ES5", "DOM"],
         "esModuleInterop": true,
         "isolatedModules": true,
-        "types": ["cypress", "node"],
+        "types": ["cypress", "node", "cypress-mochawesome-reporter"],
         "forceConsistentCasingInFileNames": true,
         "strict": true
     },
-    "include": ["**/*.ts"],
+    "include": ["**/*.ts", "./cypress.d.ts"],
     "exclude": ["node_modules"]
 }
