--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,4 @@ jobs:
               if: failure()
               with:
                   name: cypress-videos
-                  path: cypress/videos
+                  path: $GITHUB_WORKSPACE/cypress/videos
